<resources>
    <string name="app_name">HeartProject</string>
    <string name="start">Start</string>
    <string name="your_name">Your name</string>
    <string name="my_profile">My Profile</string>
    <string name="my_age">My age</string>
    <string name="i_am">I am</string>
    <string name="a_man">A man</string>
    <string name="a_woman">A woman</string>
    <string name="my_heart">My Heart</string>
    <string name="do_you_have_heart_issues">Do you have Heart issues ?</string>
    <string name="are_you_diabetic">Are you diabetic ?</string>
    <string name="are_you_prone_to_hypertension">Are you prone to hypertension ?</string>
    <string name="do_you_know_your_body_mass_index">Do you know your Body Mass Index (BMI) ?</string>
    <string name="do_you_have_cholesterol_issues">Do you have Cholesterol issues ?</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="have_you_ever_had_a_heart_checkup">Have you ever had a heart checkup ?</string>
    <string name="have_you_ever_seen_a_cardiologist">Have you ever seen a cardiologist ?</string>
    <string name="have_you_already_reviewed_your_cardiovascular_risk_with_your_doctor">Have you already reviewed your cardiovascular risk with your doctor ?</string>
    <string name="my_heart_tracking">My Heart Tracking</string>
    <string name="have_there_been_cases_of_heart_problems_in_your_family">Have there been cases of heart problems in your family ?</string>
    <string name="my_diet">My Diet</string>
    <string name="do_you_start_your_day_with_breakfast">Do you start your day with breakfast ?</string>
    <string name="do_you_eat_fruits_and_vegetables_every_day">Do you eat fruits and vegetables every day ?</string>
    <string name="at_your_house_do_you_eat_most_often">At your house, do you eat most often ?</string>
    <string name="do_you_realize_your_dishes">Do you realize your dishes ?</string>
    <string name="do_you_eat_cold_meats_regularly">Do you eat cold meats regularly ?</string>
    <string name="do_you_know_the_nutri_score">Do you know the Nutri-Score ?</string>
    <string name="my_physical_activity">My Physical Activity</string>
    <string name="do_you_walk_briskly_every_day">Do you walk briskly every day ?</string>
    <string name="how_many_times_a_week_do_you_exercise_for_at_least_30_minutes">How many times a week do you exercise for at least 30 minutes ?</string>
    <string name="do_you_know_your_heart_rate_that_should_not_be_exceeded_during_exercise">Do you know your heart rate that should not be exceeded during exercise ?</string>
    <string name="regarding_your_sports_profile_would_you_say_that">Regarding your sports profile, would you say that :</string>
    <string name="which_of_the_following_activities_would_you_do_the_most_easily_on_your_weekends">Which of the following activities would you do the most easily on your weekends ?</string>
    <string name="my_tobacco_consumption">My Tobacco Consumption</string>
    <string name="do_you_smoke_at_least_once_a_day">Do you smoke at least once a day ?</string>
    <string name="Are_you_a_former_smoker">Are you a former smoker (you quit for less than 5 years) ?</string>
    <string name="Does_anyone_or_others_smoke_in_your_home">Does anyone or others smoke in your home ?</string>
    <string name="my_stress_managment">My Stress Managment</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="are_you_feeling_stressed_or_anxious">Are you feeling stressed or anxious ?</string>
    <string name="are_you_prone_to_anger">Are you prone to anger ?</string>
    <string name="are_you_taking_any_antidepressants_anxiolytics_or_hypnotics">Are you taking any antidepressants, anxiolytics or hypnotics ?</string>
    <string name="do_you_manage_your_family_environment_on_your_own">Do you manage your family environment on your own ?</string>
    <string name="my_life_hygiene">My Life Hygiene</string>
    <string name="do_you_ever_drink_more_than_3_glasses_of_alcohol_during_the_day_once_or_twice_a_week">Do you ever drink more than 3 glasses of alcohol during the day once or twice a week (wine and beer included) ?</string>
    <string name="do_you_ever_drink_energy_drinks">Do you ever drink energy drinks ?</string>
    <string name="do_you_get_more_than_7_hours_of_sleep_per_night">Do you get more than 7 hours of sleep per night ?</string>
    <string name="are_you_prone_to_sleep_disturbances">Are you prone to sleep disturbances ?</string>
    <string name="your_result">Your Result</string>
    <string name="name2">Name :</string>
    <string name="age2">Age :</string>
    <string name="Gender2">Gender :</string>
    <string name="finish">Finish</string>
    <string name="official_site">Official Site</string>
    <string name="close_application">Close Application</string>
    <string name="new_test">New Test</string>
    <string name="drug_and_medication">Drug And Medication</string>
    <string name="do_you_take_a_medical_treatment">Do you take a medical treatment ?</string>
    <string name="do_you_use_drugs">Do you use drugs ?</string>
    <string name="did_you_have_a_genetic_disease">Did you have a genetic disease ?</string>
</resources>