<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMyDiet">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="184dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/my_diet"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="action_previous_step"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="action_next_step"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="289dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:text="@string/do_you_start_your_day_with_breakfast"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="284dp"
        android:layout_height="39dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="110dp"
        android:text="@string/do_you_eat_fruits_and_vegetables_every_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="252dp"
        android:layout_height="36dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="170dp"
        android:text="@string/at_your_house_do_you_eat_most_often"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="250dp"
        android:text="@string/do_you_realize_your_dishes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="310dp"
        android:text="@string/do_you_eat_cold_meats_regularly"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="370dp"
        android:text="@string/do_you_know_the_nutri_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Spinner
        android:id="@+id/spinner10"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/YesNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Spinner
        android:id="@+id/spinner11"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/YesNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Spinner
        android:id="@+id/spinner12"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/DishType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Spinner
        android:id="@+id/spinner13"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/YesNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Spinner
        android:id="@+id/spinner14"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/YesNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Spinner
        android:id="@+id/spinner15"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/YesNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="69dp"
        android:layout_height="66dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/monalimentation" />

</androidx.constraintlayout.widget.ConstraintLayout>