<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMyPhysicalActivity">

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="action_previous_step"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:onClick="action_next_step"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/my_physical_activity"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp"
        android:text="@string/do_you_walk_briskly_every_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="271dp"
        android:layout_height="38dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="140dp"
        android:text="@string/how_many_times_a_week_do_you_exercise_for_at_least_30_minutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="267dp"
        android:layout_height="51dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="230dp"
        android:text="@string/do_you_know_your_heart_rate_that_should_not_be_exceeded_during_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="268dp"
        android:layout_height="34dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="320dp"
        android:text="@string/regarding_your_sports_profile_would_you_say_that"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="289dp"
        android:layout_height="54dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="410dp"
        android:text="@string/which_of_the_following_activities_would_you_do_the_most_easily_on_your_weekends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <Spinner
        android:id="@+id/spinner16"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/YesNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <Spinner
        android:id="@+id/spinner17"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/TimeNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <Spinner
        android:id="@+id/spinner18"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/YesNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <Spinner
        android:id="@+id/spinner19"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/YesNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <Spinner
        android:id="@+id/spinner20"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="10dp"
        android:entries="@array/WeekendActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="78dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/monactivitephysique" />

</androidx.constraintlayout.widget.ConstraintLayout>